--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -347,7 +347,7 @@ button.btn {
 }
 .quality--box__content {
     background: #FFFFFF;
-    box-shadow: 0px 55px 55px rgb(119 119 119 / 16%);
+    box-shadow: 0px 55px 55px rgba(119, 119, 119, 0.16);
     border-radius: 3px;
     height: 130px;
     width: 130px;
