--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -69,6 +69,18 @@ p {
   flex-wrap: wrap;
 }
 
+.col-40 {
+  flex: 0 0 40%;
+  max-width: 40%;
+  flex-wrap: wrap;
+}
+
+.col-60 {
+  flex: 0 0 60%;
+  max-width: 60%;
+  flex-wrap: wrap;
+}
+
 header {
   background-image: url(../images/Group1.png);
   background-repeat: no-repeat;
@@ -564,4 +576,89 @@ button.btn {
   text-align: center;
   color: #303E48;
   padding-top: 30px;
+}
+
+.review--box__image img {
+  max-width: 68%;
+}
+
+.review--box__wrap.flex {
+  padding: 20px 15px;
+  align-items: center;
+  justify-content: center;
+}
+
+.review--box__star i {
+  color: #FF9900;
+}
+
+.review--box__text {
+  padding-bottom: 20px;
+}
+.review--box__text h5 {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 36px;
+  text-transform: capitalize;
+  color: #000000;
+  padding-top: 16px;
+}
+.review--box__text p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: #303E48;
+  padding-top: 20px;
+  max-width: 80%;
+}
+
+.review--verified.flex {
+  padding: 0 15px;
+  align-items: center;
+}
+.review--verified.flex span {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #303E48;
+}
+
+.review--verified__customer {
+  padding-left: 20px;
+}
+
+.review--wrap {
+  padding-top: 50px;
+}
+
+.review--line {
+  border-bottom: 1px solid #D9D9D9;
+  width: 80%;
+}
+
+.section__product {
+  background: #F8F8F8;
+}
+
+.product--content {
+  padding-top: 60px;
+}
+
+.product--title h2 {
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 70px;
+  text-transform: capitalize;
+  color: #303E48;
+}
+.product--title p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 30px;
+  color: #303E48;
+  max-width: 90%;
+}
+
+.product--title {
+  padding-left: 150px;
 }/*# sourceMappingURL=styles.css.map */
