--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -777,8 +777,8 @@ section.section__gallery {
   padding-bottom: 50px;
 }
 
-.other--product__card :nth-last-child(4) {
-  padding-right: 20px;
+.other--product__card {
+  padding-right: 70px;
   text-align: center;
 }
 
@@ -798,6 +798,8 @@ section.section__faq {
 
 .faq-main.flex {
   padding: 0 15px;
+  align-items: center;
+  justify-content: center;
 }
 
 .accordion {
